# revm

./: .gitignore  Cargo.toml
.github/workflows/: openvm-tests.yml
bins/revm-test/: Cargo.toml
bins/revme/: CHANGELOG.md  Cargo.toml
bins/revme/src/cmd/statetest/models/: eip7702.rs
crates/bytecode/: CHANGELOG.md
crates/context/: CHANGELOG.md
crates/context/interface/: CHANGELOG.md
crates/database/: CHANGELOG.md
crates/database/interface/: CHANGELOG.md
crates/handler/: CHANGELOG.md
crates/inspector/: CHANGELOG.md
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/src/: opcode.rs
crates/interpreter/src/interpreter/: analysis.rs  stack.rs
crates/op-revm/: CHANGELOG.md
crates/precompile/: CHANGELOG.md  Cargo.toml
crates/precompile/src/: bn128.rs  hash.rs  kzg_point_evaluation.rs  lib.rs  secp256k1.rs
crates/precompile/src/bn128/: openvm.rs
crates/precompile/src/secp256k1/: openvm_k256.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: env.rs  kzg.rs  lib.rs
crates/primitives/src/eip7702/: authorization_list.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/context/: evm_context.rs
crates/revm/src/handler/handle_types/: validation.rs
crates/revm/src/handler/mainnet/: pre_execution.rs
crates/state/: CHANGELOG.md
crates/statetest-types/: CHANGELOG.md
tests/eof_suite/eest/state_tests/prague/eip7692_eof_v1/eip7620_eof_create/eofcreate/: eofcreate_in_initcode.json  eofcreate_in_initcode_reverts.json
tests/eof_suite/eest/state_tests/prague/eip7692_eof_v1/eip7620_eof_create/eofcreate_failures/: insufficient_gas_memory_expansion.json  insufficient_initcode_gas.json  insufficient_returncontract_auxdata_gas.json
tests/openvm/: Cargo.toml
tests/openvm/program/: Cargo.toml
tests/openvm/programs/ec_add/: Cargo.toml
tests/openvm/programs/ec_add/src/: main.rs
tests/openvm/programs/ec_mul/: Cargo.toml  openvm.toml
tests/openvm/programs/ec_mul/src/: main.rs
tests/openvm/programs/ecrecover/: Cargo.toml
tests/openvm/programs/ecrecover/src/: main.rs
tests/openvm/programs/kzg_point_evaluation/: Cargo.toml  openvm.toml  openvm_init.rs
tests/openvm/programs/kzg_point_evaluation/src/: main.rs
tests/openvm/programs/pairing/: Cargo.toml  openvm.toml  openvm_init.rs
tests/openvm/programs/pairing/src/: main.rs
tests/openvm/programs/sha256/: Cargo.toml
tests/openvm/programs/sha256/src/: main.rs
tests/openvm/src/: ec_precompile.rs  ecrecover.rs  kzg_precompile.rs  lib.rs  sha256_precompile.rs
tests/openvm/tests/: Cargo.toml
tests/openvm/tests/src/: ec_precompile.rs  kzg_precompile.rs  lib.rs  sha256_precompile.rs
