[package]
name = "openvm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { workspace = true }
openvm-ecc-guest = { workspace = true }
openvm-pairing = { workspace = true }
openvm-keccak256-guest = { workspace = true }
openvm-sdk = { workspace = true }
openvm-build = { workspace = true }
openvm-pairing-transpiler = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-algebra-circuit = { workspace = true }
openvm-algebra-transpiler = { workspace = true }
openvm-ecc-circuit = { workspace = true }
openvm-ecc-transpiler = { workspace = true }
openvm-pairing-circuit = { workspace = true }
openvm-circuit = { workspace = true, features = ["test-utils", "parallel"] }
openvm-stark-sdk = { workspace = true }

num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

primitives = { workspace = true }

sha2 = { version = "0.10", default-features = false }
toml = "0.8.23"

[dev-dependencies]
rand.workspace = true
secp256k1.workspace = true
