[workspace]
[package]
name = "ec-mul-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-execution" }
revm-precompile = { path = "../../../../crates/precompile", default-features = false, features = [
    "openvm-bn",
] }
