[workspace]
[package]
name = "ecrecover-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7" }
revm-precompile = { path = "../../../../crates/precompile", default-features = false, features = [
    "openvm-k256",
] }
revm-primitives = { path = "../../../../crates/primitives", default-features = false }
k256 = { git = "https://github.com/openvm-org/openvm.git", rev = "9ef822c947f14eb436e293971c969cfcb688dbe7" }

[features]
default = []

[profile.release]
panic = "abort"
lto = "thin"    # faster compile time

[profile.profiling]
inherits = "release"
debug = 2
strip = false
