[workspace]
[package]
name = "kzg-point-evaluation-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.1" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.1" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.1" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.1-rc.1", features = [
    "bls12_381",
] }
revm-precompile = { path = "../../../../crates/precompile", default-features = false, features = [
    "openvm-kzg",
] }

[features]
use-intrinsics = ["revm-precompile/openvm-kzg-intrinsics"]
