[workspace]
[package]
name = "ec-pairing-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "main" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "main" }
revm-precompile = { path = "../../../../crates/precompile", default-features = false, features = [
    "openvm-bn",
] }
